add backend api url

--- a/src/components/activity/ClientActivity.css
+++ b/src/components/activity/ClientActivity.css
@@ -1,4 +1,4 @@
-.activity-modal-overlay {
+{{/* .activity-modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -9,4 +9,4 @@
   justify-content: center;
   align-items: center;
 }
-
+ */}}
